--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
+    "nodemailer": "^7.0.10",
     "resend": "^6.1.2",
     "silentchat": "file:..",
     "socket.io": "^4.8.1"
